SG00338424/src/main/java/com/example/demo/Errors/HTTP500.java
package com.example.demo.Errors;

public class HTTP500 extends RuntimeException {
    private static final long serialVersionUID = 1L;

    public HTTP500(String message) {
        super(message);
    }
}